--- a/Modules/Microsoft365DSC/DSCResources/MSFT_O365OrgSettings/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_O365OrgSettings/settings.json
@@ -1,6 +1,14 @@
 ﻿{
     "resourceName": "O365OrgSettings",
     "description": "",
+    "roles": {
+        "read": [
+            "Insights Administrator"
+        ],
+        "update": [
+            "Insights Administrator"
+        ]
+    },
     "permissions": {
         "ProjectWorkManagement": {
             "application":{
