--- a/Modules/Microsoft365DSC/DSCResources/MSFT_SHSpaceUser/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_SHSpaceUser/settings.json
@@ -18,12 +18,12 @@
             "application": {
                 "read": [
                     {
-                        "name": "Permission for Monitoring and Export"
+                        "name": "User.Read.All"
                     }
                 ],
                 "update": [
                     {
-                        "name": "Permission for deploying"
+                        "name": "User.Read.All"
                     }
                 ]
             }
