Update export of ADO Permission Group Settings and permissions in settings.json

--- a/Modules/Microsoft365DSC/DSCResources/MSFT_ADOPermissionGroupSettings/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_ADOPermissionGroupSettings/settings.json
@@ -15,6 +15,35 @@
                 "read": [],
                 "update": []
             }
+        },
+        "Azure DevOps": {
+            "delegated": {
+                "read": [
+                    {
+                        "name": "vso.graph"
+                    },
+                    {
+                        "name": "vso.profile"
+                    }
+                ],
+                "update": [
+                    {
+                        "name": "vso.identity"
+                    },
+                    {
+                        "name": "vso.graph"
+                    },
+                    {
+                        "name": "vso.profile"
+                    },
+                    {
+                        "name": "vso.security_manage"
+                    },
+                    {
+                        "name": "vso.security_manage"
+                    }
+                ]
+            }
         }
     }
 }
