--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOResourceConfiguration/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOResourceConfiguration/settings.json
@@ -2,8 +2,12 @@
     "resourceName": "EXOResourceConfiguration",
     "description": "",
     "roles": {
-        "read": [],
-        "update": []
+        "read": [
+            "Global Reader"
+        ],
+        "update": [
+            "Exchange Administrator"
+        ]
     },
     "permissions": {
         "graph": {
@@ -20,7 +24,7 @@
             "requiredroles": [
                 "Organization Configuration"
             ],
-            "requiredrolegroups": ""
+            "requiredrolegroups": "Organization Management"
         }
     }
 }
