Update requiredrolegroups to array in settings.json file

--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOAcceptedDomain/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOAcceptedDomain/settings.json
@@ -28,7 +28,9 @@
                 "View-Only Configuration",
                 "Mail Recipients"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
