--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOApplicationAccessPolicy/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOApplicationAccessPolicy/settings.json
@@ -25,7 +25,9 @@
                 "View-Only Configuration",
                 "Organization Configuration"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
