--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOArcConfig/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOArcConfig/settings.json
@@ -28,7 +28,9 @@
         "Transport Hygiene",
         "View-Only Configuration"
       ],
-      "requiredrolegroups": "Organization Management"
+      "requiredrolegroups": [
+                "Organization Management"
+            ]
     }
   }
 }
