--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOAvailabilityConfig/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOAvailabilityConfig/settings.json
@@ -27,7 +27,9 @@
                 "Mail Tips",
                 "Message Tracking"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
