--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOIntraOrganizationConnector/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOIntraOrganizationConnector/settings.json
@@ -28,7 +28,9 @@
                 "Mail Tips",
                 "Message Tracking"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
