--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOMailboxIRMAccess/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOMailboxIRMAccess/settings.json
@@ -27,7 +27,9 @@
                 "Organization Management",
                 "View-Only Organization Management"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
