--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOMEConfiguration/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOMEConfiguration/settings.json
@@ -30,7 +30,9 @@
                 "View-Only Configuration",
                 "Security Reader"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
