--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOrganizationConfig/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOrganizationConfig/settings.json
@@ -34,7 +34,9 @@
                 "Distribution Groups",
                 "Mail Recipients"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
