--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOrganizationRelationship/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOrganizationRelationship/settings.json
@@ -29,7 +29,9 @@
                 "Message Tracking",
                 "Organization Configuration"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
