--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOwaMailboxPolicy/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOwaMailboxPolicy/settings.json
@@ -26,7 +26,9 @@
                 "View-Only Configuration",
                 "Mail Recipients"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
