--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOResourceConfiguration/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOResourceConfiguration/settings.json
@@ -24,7 +24,9 @@
             "requiredroles": [
                 "Organization Configuration"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
