--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOTransportRule/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOTransportRule/settings.json
@@ -29,7 +29,9 @@
                 "Security Reader",
                 "Information Rights Management"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
