--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOMailboxPlan/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOMailboxPlan/settings.json
@@ -28,7 +28,9 @@
                 "Mail Recipients",
                 "UM Mailboxes"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
