--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOnPremisesOrganization/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOOnPremisesOrganization/settings.json
@@ -25,7 +25,9 @@
                 "Remote and Accepted Domains",
                 "View-Only Configuration"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
