--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXORoleAssignmentPolicy/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXORoleAssignmentPolicy/settings.json
@@ -27,7 +27,9 @@
                 "View-Only Configuration",
                 "Mail Recipients"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
