--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXORoleGroup/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXORoleGroup/settings.json
@@ -25,7 +25,9 @@
                 "Role Management",
                 "View-Only Configuration"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
