--- a/Modules/Microsoft365DSC/DSCResources/MSFT_EXOSharedMailbox/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_EXOSharedMailbox/settings.json
@@ -47,7 +47,9 @@
                 "MyMailboxDelegation",
                 "MyDisplayName"
             ],
-            "requiredrolegroups": "Organization Management"
+            "requiredrolegroups": [
+                "Organization Management"
+            ]
         }
     }
 }
