Update Intune WiFi configuration policies

--- a/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneWifiConfigurationPolicyMacOS/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneWifiConfigurationPolicyMacOS/settings.json
@@ -1,6 +1,6 @@
 {
     "resourceName": "IntuneWifiConfigurationPolicyMacOS",
-    "description": "This resource configures an Intune Wifi Configuration Policy for MacOS Device.",
+    "description": "This resource configures an Intune Wifi Configuration Policy for MacOS with Basic Wi-Fi type.",
     "permissions": {
         "graph": {
             "delegated": {
