--- a/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneWifiConfigurationPolicyIOS/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneWifiConfigurationPolicyIOS/settings.json
@@ -1,6 +1,6 @@
 {
     "resourceName": "IntuneWifiConfigurationPolicyIOS",
-    "description": "This resource configures an Intune Wifi Configuration Policy for iOS Device.",
+    "description": "This resource configures an Intune Wifi Configuration Policy for iOS with Basic Wi-Fi type.",
     "permissions": {
         "graph": {
             "delegated": {
