--- a/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneWifiConfigurationPolicyWindows10/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneWifiConfigurationPolicyWindows10/settings.json
@@ -1,6 +1,6 @@
 {
     "resourceName": "IntuneWifiConfigurationPolicyWindows10",
-    "description": "This resource configures an Intune Wifi Configuration Policy for Windows10 Device.",
+    "description": "This resource configures an Intune Wifi Configuration Policy for Windows10 with Basic Wi-Fi type.",
     "permissions": {
         "graph": {
             "delegated": {
