Update Intune script resources

--- a/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneDeviceCompliancePolicyWindows10/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneDeviceCompliancePolicyWindows10/settings.json
@@ -10,6 +10,9 @@
                     },
                     {
                         "name": "DeviceManagementConfiguration.Read.All"
+                    },
+                    {
+                        "name": "DeviceManagementScripts.Read.All"
                     }
                 ],
                 "update": [
@@ -28,6 +31,9 @@
                     },
                     {
                         "name": "DeviceManagementConfiguration.Read.All"
+                    },
+                    {
+                        "name": "DeviceManagementScripts.Read.All"
                     }
                 ],
                 "update": [
