--- a/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneDeviceComplianceScriptWindows10/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneDeviceComplianceScriptWindows10/settings.json
@@ -1,16 +1,44 @@
 {
-  "resourceName": "IntuneDeviceComplianceScriptWindows10",
-  "description": "This resource configures an Intune Device Compliance Script for Windows10.",
-  "permissions": {
-    "graph": {
-      "delegated": {
-        "read": [],
-        "update": []
-      },
-      "application": {
-        "read": [],
-        "update": []
-      }
+    "resourceName": "IntuneDeviceComplianceScriptWindows10",
+    "description": "This resource configures an Intune Device Compliance Script for Windows10.",
+    "permissions": {
+        "graph": {
+            "delegated": {
+                "read": [
+                    {
+                        "name": "Group.Read.All"
+                    },
+                    {
+                        "name": "DeviceManagementScripts.Read.All"
+                    }
+                ],
+                "update": [
+                    {
+                        "name": "Group.Read.All"
+                    },
+                    {
+                        "name": "DeviceManagementScripts.ReadWrite.All"
+                    }
+                ]
+            },
+            "application": {
+                "read": [
+                    {
+                        "name": "Group.Read.All"
+                    },
+                    {
+                        "name": "DeviceManagementScripts.Read.All"
+                    }
+                ],
+                "update": [
+                    {
+                        "name": "Group.Read.All"
+                    },
+                    {
+                        "name": "DeviceManagementScripts.ReadWrite.All"
+                    }
+                ]
+            }
+        }
     }
-  }
 }
