--- a/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneDeviceRemediation/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_IntuneDeviceRemediation/settings.json
@@ -9,7 +9,7 @@
             "name": "Group.Read.All"
           },
           {
-            "name": "DeviceManagementConfiguration.Read.All"
+            "name": "DeviceManagementScripts.Read.All"
           }
         ],
         "update": [
@@ -17,10 +17,7 @@
             "name": "Group.Read.All"
           },
           {
-            "name": "DeviceManagementConfiguration.Read.All"
-          },
-          {
-            "name": "DeviceManagementConfiguration.ReadWrite.All"
+            "name": "DeviceManagementScripts.ReadWrite.All"
           }
         ]
       },
@@ -30,7 +27,7 @@
             "name": "Group.Read.All"
           },
           {
-            "name": "DeviceManagementConfiguration.Read.All"
+            "name": "DeviceManagementScripts.Read.All"
           }
         ],
         "update": [
@@ -38,10 +35,7 @@
             "name": "Group.Read.All"
           },
           {
-            "name": "DeviceManagementConfiguration.Read.All"
-          },
-          {
-            "name": "DeviceManagementConfiguration.ReadWrite.All"
+            "name": "DeviceManagementScripts.ReadWrite.All"
           }
         ]
       }
