Corrected permissions issue

--- a/Modules/Microsoft365DSC/DSCResources/MSFT_SPORetentionLabelsSettings/settings.json
+++ b/Modules/Microsoft365DSC/DSCResources/MSFT_SPORetentionLabelsSettings/settings.json
@@ -23,10 +23,14 @@
             },
             "application": {
                 "read": [
-                    "Sites.FullControl.All"
+                    {
+                        "name": "Sites.FullControl.All"
+                    }
                 ],
                 "update": [
-                    "Sites.FullControl.All"
+                    {
+                        "name": "Sites.FullControl.All"
+                    }
                 ]
             }
         }
